objects/Solution_ID__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>"Yes"</defaultValue>
        <description>Is the solution id Active?</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <description>Solution Category</description>
        <label>Solution Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_ID__c</fullName>
        <description>Solution Identifier</description>
        <label>Solution ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Sub_Category__c</fullName>
        <description>Solution Category</description>
        <label>Solution Sub Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Solution Identifiers</description>
    <label>Solution ID</label>
    <nameField>
        <label>Solution ID Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>Solution_Sub_Category__c</columns>
        <columns>Solution_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>